--- a/css/reset.css
+++ b/css/reset.css
@@ -46,3 +46,12 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+body{
+	color: #fff;
+}
+
+a{
+	color: inherit;
+	text-decoration: inherit;
+}
